crates/keron-lang/tests/corpus/errors/check/nullable_used_as_t.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `String`, found `String?`
  --> 3:20
  |
3 | val name: String = maybe_name
  |                    ^^^^^^^^^^
